--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           context: 'Movimentação (Cursor)',
           command: '`b`',
           description:
-            '**(backward)** Volta para o início da palavra anterior.',
+            '** (backward)** Volta para o início da palavra anterior.',
           example:
             'Se o cursor está em `const user_name = "John";`, pressionar `b` o moverá de volta para o início de `user_name`, e depois para `const`.',
           orientation: 'horizontal',
@@ -317,7 +317,7 @@
           command: '`E`',
           description: 'Move para o final da PALAVRA atual (ignora pontuação).',
           example:
-            'Útil para navegar rapidamente até o fim de expressões complexas.',
+            'Na linha `if (user_id)` com o cursor em `if`, pressione `E` para ir até o final da palavra `user_id`.',
           orientation: 'horizontal',
         },
         {
@@ -325,7 +325,8 @@
           context: 'Movimentação (Cursor)',
           command: '`ge`',
           description: 'Move para o final da palavra anterior.',
-          example: 'O oposto de `e`.',
+          example:
+            'Na frase `const myVar = 10;`, com o cursor no final, `ge` o moverá para o final de `myVar`.',
           orientation: 'horizontal',
         },
         {
@@ -334,7 +335,8 @@
           command: '`gE`',
           description:
             'Move para o final da PALAVRA anterior (ignora pontuação).',
-          example: 'O oposto de `E`.',
+          example:
+            'O oposto de `E`. Na linha `const my-variable = 10;`, com o cursor no final, `gE` o levará para o final de `my-variable`.',
           orientation: 'horizontal',
         },
         {
@@ -1363,7 +1365,7 @@ n  &lt;Space&gt;bd   * &lt;Cmd&gt;bdelete&lt;CR&gt;
                   <button class="copy-btn group relative shrink-0" data-command="${cleanCommand}" aria-label="Copiar comando ${cleanCommand}">
                        <span class="absolute -top-8 -left-1/2 transform translate-x-1/4 w-auto min-w-max px-2 py-1 bg-zinc-600 text-white text-xs rounded-md opacity-0 group-hover:opacity-100 transition-opacity">Copiar</span>
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-stone-500 dark:text-stone-400 hover:text-zinc-800 dark:hover:text-zinc-100 transition-colors">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 0 01-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 0 011.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 0 00-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 01-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5a3.375 3.375 0 00-3.375-3.375H9.75" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 01-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 0 011.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 0 00-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 01-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5a3.375 3.375 0 00-3.375-3.375H9.75" />
                       </svg>
                   </button>
               </div>
@@ -1494,7 +1496,6 @@ n  &lt;Space&gt;bd   * &lt;Cmd&gt;bdelete&lt;CR&gt;
         searchInput.value = '';
         currentSearch = '';
         clearSearchBtn.classList.add('hidden');
-        renderCommands();
         searchInput.focus();
       });
 
